--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -503,7 +503,7 @@
       "1614429899bea2daf1": {
         "type": "framework--custom-content",
         "settings": {
-          "custom_html": "<center>\n\n<p><b>Disponible dans toute l'Île-de-France, le Pays de Gex, Rhône-Alpes et Genève. <br> \nAucun acompte n'est exigé, le paiement se fait à la livraison.\n<\/b><\/p>\n\n<\/center>"
+          "custom_html": "<center>\n\n<p><b>Disponible dans toute l'Île-de-France, le Pays de Gex, Rhône-Alpes et Genève. <br> \nSeul le paiement de l'acompte se fait en ligne, le solde se règle après l'installation.\n<\/b><\/p>\n\n<\/center>"
         }
       },
       "1614454164b7af0ba0": {
