--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -503,7 +503,7 @@
       "1614429899bea2daf1": {
         "type": "framework--custom-content",
         "settings": {
-          "custom_html": "<center>\n\n<p><b>Disponible dans toute l'Île-de-France, le Pays de Gex, Rhône-Alpes et Genève. <br> \nSeul le paiement de l'acompte se fait en ligne, le solde se règle après l'installation.\n<\/b><\/p>\n\n<\/center>"
+          "custom_html": "<center>\n\n<p><b>Disponible dans toute l'Île-de-France,  Rhône-Alpes et Genève. <br> \nSeul le paiement de l'acompte se fait en ligne, le solde se règle après l'installation.\n<\/b><\/p>\n\n<\/center>"
         }
       },
       "1614454164b7af0ba0": {
@@ -528,6 +528,22 @@
         "type": "list-collections",
         "settings": {
           "grid": false
+        }
+      },
+      "framework--blog": {
+        "type": "framework--blog",
+        "settings": {
+          "show-title": false,
+          "show-tag-filter": true,
+          "show-excerpt": true,
+          "show-rss": true,
+          "columns": 2,
+          "show-featured": false,
+          "tag": "featured",
+          "image-height": "medium",
+          "alt-color": true,
+          "parallax-enabled": false,
+          "apply-overlay": true
         }
       }
     },
