--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -309,7 +309,7 @@
           "16055930477808e731-1": {
             "type": "image",
             "settings": {
-              "image": "shopify:\/\/shop_images\/153617157_1036508973508692_5912219394092473033_n.jpg",
+              "image": "shopify:\/\/shop_images\/1619979637492.jpg",
               "wide": true,
               "tall": false,
               "retain-ratio": false,
@@ -331,7 +331,7 @@
           "16055930477808e731-3": {
             "type": "image",
             "settings": {
-              "image": "shopify:\/\/shop_images\/156955771_247041417075897_6251991366767768154_n_3b82111f-8bfc-48e7-86a1-cfe25dffac86.jpg",
+              "image": "shopify:\/\/shop_images\/1619976734195.jpg",
               "wide": false,
               "tall": false,
               "retain-ratio": false,
