--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -545,6 +545,33 @@
           "parallax-enabled": false,
           "apply-overlay": true
         }
+      },
+      "1619985045bddc2444": {
+        "type": "testimonials",
+        "blocks": {
+          "1619985045bddc2444-0": {
+            "type": "quote",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/50456914_1998409953599621_8418730435302916096_n.jpg",
+              "quote": "<p>Nous avons passé un superbe moment grâce à cette location de jacuzzi à domicile ! L&#x27;équipe est très sympa et réactive. Nous avons réservé le jacuzzi à 15h et l&#x27;avons eu à 17h ! Super concept, je recommande <\/p>",
+              "author": "Florine",
+              "author_link": "https:\/\/www.facebook.com\/florine.cousseau.5"
+            }
+          }
+        },
+        "block_order": [
+          "1619985045bddc2444-0"
+        ],
+        "settings": {
+          "slider": 1,
+          "delay": 10,
+          "title": "Nos clients partagent leur expérience",
+          "header_font_size": 30,
+          "heading_color": "#000",
+          "author_color": "#000",
+          "quote_color": "#000",
+          "heading_font": "pacifico_n4"
+        }
       }
     },
     "content_for_index": [
@@ -561,6 +588,7 @@
       "161441903806815d45",
       "1614424401c8ec986d",
       "1522436609159",
+      "1619985045bddc2444",
       "1522436617631",
       "1522436965040",
       "1533946059866",
