--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,7 +1,7 @@
 {
   "current": {
-    "color--accent": "#166678",
-    "bdr-color--page": "#166678",
+    "color--accent": "#ff9ea8",
+    "bdr-color--page": "#ff9ea8",
     "bg-color--body": "#ffffff",
     "color--body": "#212121",
     "color--alternative": "#ffffff",
@@ -10,12 +10,12 @@
     "color--button": "#ffffff",
     "bg-color--button": "#212121",
     "banner--alternative-text": false,
-    "bg-color--announcement": "#166678",
+    "bg-color--announcement": "#ff9ea8",
     "announcement--alternative-text": true,
     "color--header--buttons": "#212121",
     "bg-color--footer": "#ffffff",
     "color--footer": "#212121",
-    "bg-color--contact-modal": "#166678",
+    "bg-color--contact-modal": "#ff9ea8",
     "contact-modal--alternative-text": true,
     "typography--heading": "pacifico_n4",
     "typography--heading--uppercase": false,
