--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -177,7 +177,7 @@
             "settings": {
               "image": "shopify:\/\/shop_images\/tout46_87e54f00-2037-43d2-9ead-9a3c1176580b.jpg",
               "slide-title": "Pourquoi choisir ThalassHome ?",
-              "slide-tagline": "C'est vous qui choisissez l'heure d'installation et de désinstallation vous permettant une flexibilité que vous ne trouverez nulle part ailleurs. Obtenez des prix attractifs avec la livraison offerte.",
+              "slide-tagline": "C'est vous qui choisissez l'heure d'installation et de désinstallation vous permettant une flexibilité totale. Obtenez des prix attractifs et un service client que vous ne trouverez nulle part ailleurs.",
               "slide-link-url": "shopify:\/\/collections",
               "slide-link-title": "Découvrir",
               "slide-y-pos": "middle",
@@ -498,7 +498,7 @@
       "1614429899bea2daf1": {
         "type": "framework--custom-content",
         "settings": {
-          "custom_html": "<center>\n\n<p><b>Disponibilités : Île-de-France, Rhône-Alpes, Centre-Val de Loire, Toulouse, Genève. <br> \nSeul le paiement de l'acompte se fait en ligne, le solde se règle après l'installation.\n<\/b><\/p>\n\n<\/center>"
+          "custom_html": "<center>\n\n<p><b>Disponibilités : Île-de-France, Rhône-Alpes, Centre-Val de Loire, Genève. <br> \nSeul le paiement de l'acompte se fait en ligne, le solde se règle après l'installation.\n<\/b><\/p>\n\n<\/center>"
         }
       },
       "1614454164b7af0ba0": {
