--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -188,7 +188,7 @@
         "settings": {
           "background-color": "none",
           "heading": "Nos engagements",
-          "text": "<p>De la réservation jusqu’au suivi de votre satisfaction, nous comptons bien nous occuper de vous.</p><p></p><p>Pour vos interrogations, n'hésitez pas à visiter notre <a href=\"https://www.thalasshome.com/a/faq\" target=\"_blank\" title=\"https://spa-detente.myshopify.com/pages/faq\">FAQ</a></p><p></p><p></p>"
+          "text": "<p>De la réservation jusqu’au suivi de votre satisfaction, nous comptons bien nous occuper de vous.</p><p></p><p>Pour vos interrogations, n'hésitez pas à visiter notre <a href=\"https://spa-detente.myshopify.com/pages/faq\" target=\"_blank\" title=\"https://spa-detente.myshopify.com/pages/faq\">FAQ</a></p><p></p><p></p>"
         }
       },
       "1522436617631": {
